# thermostat

./: CMakeLists.txt  CMakeSettings.json  LICENSE  Readme.md  thermostat.cpp  thermostat.h
src/: main.cpp  schema.h  thermostat.cpp  thermostat.h
src/sqlhelper/: CMakeLists.txt  sqlhelper.cpp  sqlhelper.h
src/utils/: CMakeLists.txt  utils.h
src/venstar/: CMakeLists.txt  runtime.h  thermostat.cpp  thermostat.h
src/weather/: CMakeLists.txt  darksky.cpp  darksky.h  weatherprovider.h
